--- a/src/iMat/sample.fxml
+++ b/src/iMat/sample.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,17 +10,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="492.0" prefWidth="814.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
-    <top>
-        <ToolBar prefHeight="40.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <items>
-            <ImageView fitHeight="30.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../resources/images/iMatLogga.png" />
-               </image>
-            </ImageView>
-         </items>
-        </ToolBar>
-    </top>
     <left>
         <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
@@ -118,4 +106,20 @@
             </children>
         </AnchorPane>
     </right>
+   <top>
+      <AnchorPane prefHeight="49.0" prefWidth="814.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="52.0" fitWidth="111.0" layoutX="20.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+               <image>
+                  <Image url="@../../resources/images/iMatLogga.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="44.0" fitWidth="156.0" layoutX="600.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="5.0">
+               <image>
+                  <Image url="@../../resources/images/CategoryDormantButton.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+   </top>
 </BorderPane>
