--- a/src/iMat/sample.fxml
+++ b/src/iMat/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="492.0" prefWidth="814.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
     <left>
@@ -62,6 +64,51 @@
                               <Image url="@../../resources/images/CategoryDormantButton.png" />
                            </image>
                         </ImageView>
+                        <Label layoutX="66.0" layoutY="11.0" text="Mejeri">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="66.0" layoutY="61.0" text="Godis">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="51.0" layoutY="111.0" text="Grönsaker">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="69.0" layoutY="161.0" text="Frukt">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="53.0" layoutY="211.0" text="Frysvaror">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="62.0" layoutY="261.0" text="Skafferi">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="71.0" layoutY="311.0" text="Glass">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="78.0" layoutY="361.0" text="Fisk">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="78.0" layoutY="411.0" text="Kött">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
                      </children></AnchorPane>
                     </content>
                 </ScrollPane>
@@ -119,6 +166,17 @@
                   <Image url="@../../resources/images/CategoryDormantButton.png" />
                </image>
             </ImageView>
+            <Label layoutX="696.0" layoutY="11.0" text="Logga in">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="31.0" fitWidth="35.0" layoutX="142.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../resources/images/listIcon.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="137.0" layoutY="29.0" text="Historik" />
          </children>
       </AnchorPane>
    </top>
