--- a/src/iMat/item_thumbnail.fxml
+++ b/src/iMat/item_thumbnail.fxml
@@ -1,52 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Point3D?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="thumbnailAnchorPane" scaleZ="0.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="419.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="thumbnailImageView" fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="thumbnailImageView" fitHeight="248.0" fitWidth="329.0" layoutX="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@../../resources/imat/imat/images/product_40.jpg" />
+            <Image url="@../../resources/imat/imat/images/product_26.jpg" />
          </image>
-         <rotationAxis>
-            <Point3D />
-         </rotationAxis>
       </ImageView>
-      <Button fx:id="thumbnailAddButton" layoutX="174.0" layoutY="379.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="60.0" text="+" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="174.0">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button fx:id="thumbnailRemoveButton" layoutX="174.0" layoutY="431.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="60.0" text="-" AnchorPane.bottomAnchor="2.0" AnchorPane.topAnchor="431.0">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Button>
-      <Button fx:id="thumbnailBuyButton" layoutX="236.0" layoutY="379.0" mnemonicParsing="false" prefHeight="102.0" prefWidth="150.0" text="Köp" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="2.0">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Button>
-      <Label fx:id="itemNameLabel" layoutX="16.0" layoutY="300.0" text="Ramlösa">
+      <ImageView fitHeight="110.0" fitWidth="150.0" layoutX="177.0" layoutY="249.66664123535156" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0">
+         <image>
+            <Image url="@../../resources/images/buyButtonDormant.Png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="addThumbnailImageView" fitHeight="50.0" fitWidth="60.0" layoutX="116.0" layoutY="316.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../resources/images/PlusButtonDormant.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="removeThumbnailImageView" fitHeight="50.0" fitWidth="73.0" layoutX="116.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0">
+         <image>
+            <Image url="@../../resources/images/MinusButtonDormant.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="buyThumbnailLabel" layoutX="220.0" layoutY="340.0" text="Köp">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="itemPriceLabel" layoutX="16.0" layoutY="345.0" text="Pris på varan">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label fx:id="amountThumbnailLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="78.0" layoutY="420.0" prefHeight="102.0" prefWidth="150.0" text="1" textAlignment="CENTER" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0">
+      <Label fx:id="quantityThumbnailLabel" alignment="CENTER" layoutX="1.0" layoutY="299.0" prefHeight="100.0" prefWidth="113.0" text="12" AnchorPane.bottomAnchor="2.0">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
+      <Label fx:id="nameThumbnailLabel" layoutX="10.0" layoutY="241.0" text="Lime">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label fx:id="priceThumbnailLabel" layoutX="10.0" layoutY="282.0" text="10kr styck">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
-</fx:root>
+</AnchorPane>
